<resources>
    <string name="app_name">TrovaCampi</string>
    <string name="title_activity_login">Login</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="login">LOGIN</string>
    <string name="contattaci">CONTACT US</string>
    <string name="registrati">Register</string>
    <string name="non_hai_trovato_il_campo">Don\'t you find the sport field?\nClick the button below to contact us</string>
    <string name="register">REGISTER</string>
    <string-array name="Sport">
        <item> @string/CALCIO</item>
        <item> @string/PALLAVOLO</item>
        <item> @string/TENNIS</item>
        <item> @string/PADEL</item>
        <item> @string/BASKET</item>
    </string-array>
    <string name="Benvenuto">WELCOME!</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="CALCIO">football</string>
    <string name="PALLAVOLO">volleyball</string>
    <string name="TENNIS" translatable="false">tennis</string>
    <string name="PADEL" translatable="false">padel</string>
    <string name="BASKET" translatable="false">basket</string>
    <string name="seleziona_lo_sport">Select the sport</string>
    <string name="next">NEXT</string>
    <string name="title_activity_calcio">Football</string>
    <string name="descrizione_sportpark">"PHONE: 0392494846\n MAIL: info@sportparkonline.com\n INDOOR: no\n SPORT FIELD: 5 and 7 a-side-football\n           "</string>
    <string name="action_settings">Settings</string>
    <string name="sportpark" translatable="false">SPORTPARK</string>
    <string name="leonArena" translatable="false">LEON ARENA</string>
    <string name="cantera" translatable="false">CANTERA</string>
    <string name="derby" translatable="false">DERBY</string>
    <string name="tijuana" translatable="false">TIJUANA</string>
    <string name="playsport" translatable="false">PLAYSPORT</string>
    <string name="piscineLissone" translatable="false">PISCINE LISSONE</string>
    <string name="La_Dominante" translatable="false">LA DOMINANTE</string>
    <string name="InSport" translatable="false">IN SPORT</string>
    <string name="opensport" translatable="false">OPEN SPORT</string>
    <string name="La_Dominante_img" translatable="false">LaDominante_img</string>
    <string name="LeonArena_img" translatable="false">LeonArena_img</string>
    <string name="piscineLissone_img" translatable="false">piscineLissone_img</string>
    <string name="playsport_img" translatable="false">playsport_img</string>
    <string name="tijuana_img" translatable="false">tijuana_img</string>
    <string name="descrizione_opensport">"PHONE : 389 7874334\n MAIL : tennis.sportsopen@libero.it\n INDOOR : yes\n SPORT FIELD : 5-a-side football           "</string>
    <string name="descrizione_tijuana">"PHONE : 338 6360999\n MAIL : manuel.tiju@gmail.com\n INDOOR : no\n SPORT FIELD : 5-a-side football"</string>
    <string name="derby_img" translatable="false">derby_img</string>
    <string name="cantera_img" translatable="false">cantera_img</string>
    <string name="sportpark_img" translatable="false">sportpark_img</string>
    <string name="inSport_img" translatable="false">inSport_img</string>
    <string name="opensport_img" translatable="false">opensport_img</string>
    <string name="descrizione_derby">"PHONE : 039 733229\n MAIL : info@derbymonza.it\n INDOOR : yes\n SPORT FIELD : 5-a-side football"</string>
    <string name="descrizione_LaDominante">"PHONE : 039 321221\n MAIL : info@ladominante.it\n INDOOR : no\n SPORT FIELD :5,7,11-a-side football        "</string>
    <string name="descrizione_InSport">"PHONE : 039 617831\n MAIL : arcore@insportsrl.it\n INDOOR : no\n SPORT FIELD : 5,7-a-side football"</string>
    <string name="descrizione_playsport">"PHONE : 039 6980021\n MAIL : info@playsportlesmo.it\n INDOOR : yes\n SPORT FIELD : 5-a-side football"</string>
    <string name="descrizione_leonArena">"PHONE : 348 8207614\n MAIL : ND\n INDOOR : no\n SPORT FIELD : 5,7-a-side football"</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="il_tuo_campo_non_ce">"Isn't your sport field there? "</string>
    <string name="user_address">User Address</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="e_mail" translatable="false">e-mail</string>
    <string name="numero_di_telefono">Telephone number</string>
    <string name="indirizzo_postale">Postal address</string>
    <string name="password" translatable="false">Password</string>
    <string name="ripeti_password">Retype password</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="accedi_come_ospite">Guest login</string>
    <string name="viale_lombardia_17_monza" translatable="false">VIALE LOMBARDIA 17, MONZA</string>
    <string name="via_parco_51_biassono" translatable="false">VIA PARCO 51, BIASSONO</string>
    <string name="via_vittorio_alfieri_32_vedano" translatable="false">VIA VITTORIO ALFIERI 32, VEDANO</string>
    <string name="call">CALL</string>
    <string name="via_principale_38_correzzana" translatable="false">VIA PRINCIPALE 38, CORREZZANA</string>
    <string name="via_petrarca_2_lesmo" translatable="false">VIA PETRARCA 2, LESMO</string>
    <string name="via_cilea_2_lissone" translatable="false">VIA CILEA 2, LISSONE</string>
    <string name="via_s_martino_7_arcore" translatable="false">VIA S. MARTINO 7, ARCORE</string>
    <string name="submit">SUBMIT</string>
    <string name="via_degli_atleti_vimercate" translatable="false">VIA DEGLI ATLETI, VIMERCATE</string>
    <string name="via_a_ramazzotti_19_monza" translatable="false">VIA A. RAMAZZOTTI 19, MONZA</string>
    <string name="via_lambro_sovico" translatable="false">VIA LAMBRO, SOVICO</string>
    <string name="bentornato">WELCOME BACK!</string>
    <string name="benvenuto">WELCOME!</string>
    <string name="password_dimenticata">FORGOT PASSWORD?</string>
    <string name="descrizione_cantera">"PHONE : 375 5667883\n MAIL : srl.gruppofive@gmail.com\n INDOOR : no\n SPORT FIELD : 5-a-side-football"</string>
    <string name="descrizione_piscineLissone">"PHONE : 039 262 2048\n MAIL : info@cierregroup.it\n INDOOR : yes\n SPORT FIELD : 5-a-side football"</string>
    <string name="title_activity_navigation_calcio" translatable="false">NavigationCalcio</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard">Maps</string>
    <string name="title_notifications">Profile</string>
    <string name="logout" translatable="false">LOGOUT</string>
    <string name="reset_password" translatable="false">RESET PASSWORD</string>
    <string name="change_ppassword" translatable="false">CHANGE PASSWORD</string>
    <string name="delete_account" translatable="false">DELETE ACCOUNT</string>
    <string name="carugate" translatable="false">CARUGATE</string>
    <string name="carugate_img" translatable="false">carugate_img</string>
    <string name="descrizione_carugate">"PHONE: 02 9252111\n MAIL: carugate@gestisport.com\n INDOOR: yes \n           "</string>
    <string name="via_ginestrino_carugate" translatable="false">VIA DEL GINESTRINO 17, CARUGATE</string>
    <string name="insport_img" translatable="false">insport_img</string>
    <string name="descrizione_insport2">"PHONE: 0396042562\n MAIL: concorezzo@insportsrl.it\n INDOOR: yes \n           "</string>
    <string name="via_pio_X" translatable="false">VIA PIO X 34, CONCOREZZO</string>
    <string name="gerardiana" translatable="false">GERARDIANA</string>
    <string name="gerardiana_img" translatable="false">gerardiana_img</string>
    <string name="descrizione_gerardiana">"PHONE: 347 8534436\n MAIL: segreteria@gerardianabasket.it\n INDOOR: no \n           "</string>
    <string name="via_cremona" translatable="false">VIA T. CREMONA 7, MONZA</string>
    <string name="carnate" translatable="false">PALESTRA CARNATE</string>
    <string name="carnate_img" translatable="false">carnate_img</string>
    <string name="descrizione_carnate">"PHONE: 039670734\n MAIL: basketcarnate2008@libero.it\n INDOOR: yes \n           "</string>
    <string name="via_premoli" translatable="false">VIA C. PREMOLI 5, CARNATE</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="triante_img" translatable="false">triante_img</string>
    <string name="descrizione_triante" translatable="false">"PHONE: 039 744673\n MAIL: piscinatriante@tiscali.it\n OUTDOOR"</string>
    <string name="triante" translatable="false">CENTRO TRIANTE</string>
    <string name="via_pitagora_monza" translatable="false">via Pitagora 12, Monza</string>
    <string name="circolotennis_img" translatable="false">CircoloTennis_img</string>
    <string name="descrizione_CircoloTennis" translatable="false">"PHONE: 349 7530959\n MAIL: info@ctcarate.it\n OUTDOOR"</string>
    <string name="CircoloTennisCarate" translatable="false">PHONE: 3297530959 MAIL: info@ctcarate.it OUTDOOR</string>
    <string name="via_olimpia_carate" translatable="false">via Olimpia, Carate Brianza</string>
    <string name="ceriano_img" translatable="false">ceriano_img</string>
    <string name="descrizione_circoloTennisCeriano" translatable="false">"PHONE: 0239449723\n MAIL: ctceriano@gmail.com\n INDOOR"</string>
    <string name="circolotennnisCeriano" translatable="false">CIRCOLO CERIANO</string>
    <string name="via_campaccio" translatable="false">via Campaccio 3, Ceriano Laghetto</string>
    <string name="descrizione_playsportpadel" translatable="false">"PHONE: 0396980021\n MAIL : info@playsportlesmo.it\n INDOOR : NO"</string>
    <string name="padelclub_img" translatable="false">padelclub_img</string>
    <string name="descrizione_padelclub" translatable="false">"PHONE: 275 5184588\n MAIL: info@padelclubseregno.it\n INDOOR"</string>
    <string name="padelsulbiate_img" translatable="false">padelsulbiate_img</string>
    <string name="descrizione_padelsulbiate" translatable="false">"PHONE: 3460627329\n MAIL: info@sulpaddle.it\n INDOOR</string>
    <string name="sulbiate" translatable="false">PADEL SULBIATE</string>
    <string name="padelsesto_img" translatable="false">padelsesto_img</string>
    <string name="descrizione_padelsesto" translatable="false">"PHONE: 3294378707\n MAIL:associazionesport4life@gmail.com\n OUTDOOR</string>
    <string name="padelsesto" translatable="false">SESTO PADEL CLUB</string>
    <string name="via_giovanniboccaccio" translatable="false">via Giovanni Boccaccio 265, Sesto San Giovanni</string>
    <string name="CircoloCarate" translatable="false">CIRCOLO CARATE</string>
    <string name="centrosportivbiassono_img" translatable="false">centrosportivobiassono_img</string>
    <string name="descrizione_sportparktennis" translatable="false">"PHONE: 3755667883\n REDBRICK"</string>
    <string name="biassono" translatable="false">CENTRO BIASSONO</string>
    <string name="descrizione_playsporttennis" translatable="false">"PHONE: 0396980021\n MAIL: info@playsportlesmo.it\n GREENBRICK</string>
    <string name="sovico_img" translatable="false">sovico_img</string>
    <string name="descrizione_sovico" translatable="false">"PHONE: 0392010099\n GREENBRICK"</string>
    <string name="sovico" translatable="false">CENTRO SOVICO</string>
    <string name="Campi_da_basket">Basket Pitch</string>
    <string name="Campi_da_padel">Padel Pitch</string>
    <string name="Campi_da_volley">Volley Pitch</string>
</resources>