<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_basket"
    app:startDestination="@id/PadelFragment">

    <fragment
        android:id="@+id/PadelFragment"
        android:name="it.sal.disco.unimib.trovacampi.BasketFragment"
        android:label="@string/Campi_da_padel"
        tools:layout="@layout/fragment_padel" />
    <fragment
        android:id="@+id/profile"
        android:name="it.sal.disco.unimib.trovacampi.ui.notifications.Profile"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/mapsFragmentPadel"
        android:name="it.sal.disco.unimib.trovacampi.MapsFragmentBasket"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_maps_padel" />
</navigation>