<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_basket"
    app:startDestination="@id/basketFragment">

    <fragment
        android:id="@+id/basketFragment"
        android:name="it.sal.disco.unimib.trovacampi.BasketFragment"
        android:label="@string/Campi_da_basket"
        tools:layout="@layout/fragment_basket" />
    <fragment
        android:id="@+id/profile"
        android:name="it.sal.disco.unimib.trovacampi.ui.notifications.Profile"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/mapsFragmentBasket"
        android:name="it.sal.disco.unimib.trovacampi.MapsFragmentBasket"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_maps_basket" />
</navigation>