<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_volley.xml"
    app:startDestination="@id/pallavoloFragment">


    <fragment
        android:id="@+id/profile2"
        android:name="it.sal.disco.unimib.trovacampi.ui.notifications.Profile"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/pallavoloFragment"
        android:name="it.sal.disco.unimib.trovacampi.PallavoloFragment"
        android:label="@string/Campi_da_volley"
        tools:layout="@layout/fragment_pallavolo" />
    <fragment
        android:id="@+id/mapsFragmentPallavolo"
        android:name="it.sal.disco.unimib.trovacampi.MapsFragmentPallavolo"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_maps_pallavolo" />
</navigation>